Tercer Commit - Se agrego el prototipo del carousel tipo Bootstrap

--- a/Mi primera aplicación web MVC/wwwroot/css/site.css
+++ b/Mi primera aplicación web MVC/wwwroot/css/site.css
@@ -20,3 +20,8 @@ html {
 body {
   margin-bottom: 60px;
 }
+/* Editamos el CSS para mejorara la apariencia del css */
+.carousel-item img {
+    height: 500px;
+    object-fit: cover;
+}
