--- a/Mi primera aplicación web MVC/Views/Home/Index.cshtml
+++ b/Mi primera aplicación web MVC/Views/Home/Index.cshtml
@@ -1,8 +1,44 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Inicio";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+        <!-- aqui se agrego el carousel tipo bootstrap -->
+        <div class="carousel-item active">
+			<!-- no olvidarse agregar la ruta de nuestras imagenes que fueron agregadas en el wwwroot -->
+            <img src="~/img/competicion1.jpg" class="d-block w-100" alt="Imagen de la competición 1"> 
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Primer Slide</h5>
+                <p>Descripción breve de la primera imagen.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="~/img/competicion2.jpg" class="d-block w-100" alt="Imagen de la competición 2">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Segundo Slide</h5>
+                <p>Descripción breve de la segunda imagen.</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="~/img/competicion3.jpg" class="d-block w-100" alt="Imagen de la competición 3">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Tercer Slide</h5>
+                <p>Descripción breve de la tercera imagen.</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+    </button>
 </div>
