Cuarto commit - se modifico el carousel para darle mejor apariencia mediante CSS

--- a/Mi primera aplicación web MVC/Views/Home/Index.cshtml
+++ b/Mi primera aplicación web MVC/Views/Home/Index.cshtml
@@ -14,22 +14,22 @@
 			<!-- no olvidarse agregar la ruta de nuestras imagenes que fueron agregadas en el wwwroot -->
             <img src="~/img/competicion1.jpg" class="d-block w-100" alt="Imagen de la competición 1"> 
             <div class="carousel-caption d-none d-md-block">
-                <h5>Primer Slide</h5>
-                <p>Descripción breve de la primera imagen.</p>
+                <h5>Delfin y Aucas, Un Partido Bravo</h5>
+                <p> Los orientales de visita son solventes y por supuestp los manabitas no se quedan atras.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="~/img/competicion2.jpg" class="d-block w-100" alt="Imagen de la competición 2">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Segundo Slide</h5>
-                <p>Descripción breve de la segunda imagen.</p>
+                <h5>De Dientes Apretados</h5>
+                <p>La jornada siete nos dejo un emocionante partido entre Emelec y Manta.</p>
             </div>
         </div>
         <div class="carousel-item">
             <img src="~/img/competicion3.jpg" class="d-block w-100" alt="Imagen de la competición 3">
             <div class="carousel-caption d-none d-md-block">
-                <h5>Tercer Slide</h5>
-                <p>Descripción breve de la tercera imagen.</p>
+                <h5>Jornada Ocho</h5>
+                <p>Una lucha atipica y apasionante entre El Nacional y Libertada de Loja.</p>
             </div>
         </div>
     </div>
