--- a/Mi primera aplicación web MVC/Views/Shared/_Layout.cshtml
+++ b/Mi primera aplicación web MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Equipos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipos" asp-action="Equipos">Equipos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Equipo" asp-action="ListaEquipos">Tabla De Posiciones</a>
@@ -44,7 +44,9 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2025 - Derechos Reservados LigaPro Ecuabet Aviso de Privacidad - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2025 - Daniel Sierra - Ingenieria Software - Programacion <div>
+                En camino de ser un programador front end
+            </div>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
