--- a/Mi primera aplicación web MVC/Views/Equipo/ListaEquipos.cshtml
+++ b/Mi primera aplicación web MVC/Views/Equipo/ListaEquipos.cshtml
@@ -38,7 +38,7 @@
                 <td class="text-center font-bold">@item.Puntos</td>
                 <td class="text-center">
                     <a asp-controller="Equipo" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-success">Editar</a>|
-                    <a asp-controller="Equipo" asp-action="Equipos" asp-route-id="@item.Id" class="btn btn-primary">Detalles Equipo</a>
+                    <a asp-controller="Equipo" asp-action="Detalle" asp-route-id="@item.Id" class="btn btn-primary">Detalles Equipo</a>
                 </td>
             </tr>
             posicion++;
