--- a/Mi primera aplicación web MVC/Views/Shared/_Layout.cshtml
+++ b/Mi primera aplicación web MVC/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Equipos" asp-action="Equipos">Equipos</a>
+                            <a class="nav-link text-dark" asp-controller="Equipo" asp-action="Detalle">Equipos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Equipo" asp-action="ListaEquipos">Tabla De Posiciones</a>
