--- a/Mi primera aplicación web MVC/Views/Equipo/Edit.cshtml
+++ b/Mi primera aplicación web MVC/Views/Equipo/Edit.cshtml
@@ -1,42 +1,72 @@
-﻿@model Equipo
+﻿@model Mi_primera_aplicación_web_MVC.Models.Equipo
 
-<h2>Editar Equipo</h2>
+@{
+    ViewData["Title"] = "Editar Equipo";
+}
 
-<form asp-action="Edit">
-    <input type="hidden" asp-for="Id" />
-
-    <div class="form-group">
-        <label asp-for="Nombre"></label>
-        <input asp-for="Nombre" class="form-control" readonly />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PartidosJugados"></label>
-        <input asp-for="PartidosJugados" class="form-control" type="number" min="0" />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PartidosGanados"></label>
-        <input asp-for="PartidosGanados" class="form-control" type="number" min="0" />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PartidosEmpatados"></label>
-        <input asp-for="PartidosEmpatados" class="form-control" type="number" min="0" />
-    </div>
-
-    <div class="form-group">
-        <label asp-for="PartidosPerdidos"></label>
-        <input asp-for="PartidosPerdidos" class="form-control" type="number" min="0" />
-    </div>
-
-    <button type="submit" class="btn btn-primary">Guardar</button>
-    <a asp-action="ListaEquipos" class="btn btn-secondary">Cancelar</a>
-</form>
+<h1>Editar Equipo</h1>
+<hr />
 
 @if (ViewBag.Error != null)
 {
-    <div class="alert alert-danger mt-3">
+    <div class="alert alert-danger">
         @ViewBag.Error
     </div>
+}
+
+<div class="row">
+    <div class="col-md-4">
+        <form asp-action="Edit">
+            @* Campo oculto para Id (necesario para el post) *@
+            <input type="hidden" asp-for="Id" />
+
+            <div class="form-group">
+                <label asp-for="Id" class="control-label">ID</label>
+                <input asp-for="Id" class="form-control" disabled />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Nombre" class="control-label">Nombre</label>
+                <input asp-for="Nombre" class="form-control" disabled />
+            </div>
+
+            <div class="form-group">
+                <label asp-for="PartidosJugados" class="control-label"></label>
+                <input asp-for="PartidosJugados" class="form-control" />
+                <span asp-validation-for="PartidosJugados" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="PartidosGanados" class="control-label"></label>
+                <input asp-for="PartidosGanados" class="form-control" />
+                <span asp-validation-for="PartidosGanados" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="PartidosEmpatados" class="control-label"></label>
+                <input asp-for="PartidosEmpatados" class="form-control" />
+                <span asp-validation-for="PartidosEmpatados" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="PartidosPerdidos" class="control-label"></label>
+                <input asp-for="PartidosPerdidos" class="form-control" />
+                <span asp-validation-for="PartidosPerdidos" class="text-danger"></span>
+            </div>
+
+            @* Campo oculto para los puntos que se calculan en el controlador *@
+            <input type="hidden" asp-for="Puntos" />
+
+            <div class="form-group mt-3">
+                <input type="submit" value="Guardar Cambios" class="btn btn-primary" />
+                <a asp-action="ListaEquipos" class="btn btn-secondary">Cancelar</a>
+            </div>
+        </form>
+    </div>
+</div>
+
+@section Scripts {
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
