--- a/Mi primera aplicación web MVC/Views/Equipo/Detalle.cshtml
+++ b/Mi primera aplicación web MVC/Views/Equipo/Detalle.cshtml
@@ -8,7 +8,7 @@
     <div class="card shadow-lg p-4 rounded-4">
         <div class="row align-items-center">
             <div class="col-md-4 text-center">
-                <img src="~/images/@Model.Logo" alt="@Model.Nombre" class="img-fluid rounded-circle border border-4 border-primary" style="max-height: 200px;" />
+                <img src="~/img/@Model.Logo" alt="Logo de @Model.Nombre" class="img-thumbnail me-4" style="max-width: 600px;" />
             </div>
             <div class="col-md-8">
                 <h2 class="text-primary">@Model.Nombre</h2>
